--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.17.8",
+    "@babel/preset-env": "^7.16.11",
     "ansi-colors": "4.1.3",
     "babel-loader": "9.1.2",
     "cheerio": "1.0.0-rc.12",
@@ -19,34 +21,33 @@
     "consolidate": "0.16.0",
     "copy-webpack-plugin": "11.0.0",
     "cross-env": "7.0.3",
-    "@babel/core": "^7.17.8",
-    "@babel/preset-env": "^7.16.11",
     "css-loader": "^6.7.1",
     "deepmerge": "4.2.2",
     "fancy-log": "2.0.0",
+    "glightbox": "3.2.0",
+    "html-loader": "4.2.0",
     "html-webpack-plugin": "5.5.0",
+    "htmlparser2": "8.0.1",
+    "jquery": "3.6.3",
+    "mini-css-extract-plugin": "2.7.2",
+    "path-browserify": "1.0.1",
+    "raw-loader": "4.0.2",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "5.3.6",
+    "ts-loader": "9.4.2",
     "twig": "1.15.4",
     "twig-html-loader": "0.1.9",
     "webpack": "^5.70.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
-    "glightbox": "3.2.0",
-    "html-loader": "4.2.0",
-    "htmlparser2": "8.0.1",
-    "jquery": "3.6.3",
-    "mini-css-extract-plugin": "2.7.2",
-    "path-browserify": "1.0.1",
-    "raw-loader": "4.0.2",
-    "terser-webpack-plugin": "5.3.6",
-    "ts-loader": "9.4.2",
     "webpack-import-glob-loader": "1.6.3"
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "embla-carousel": "^7.1.0",
     "fs-extra": "11.1.0"
   }
 }
