--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 node_modules
 dist
+/src/css/core/generated/icons.scss
+/src/css/core/generated/icons-svg.scss
+/src/css/core/generated/sprites.scss
+/src/css/core/generated/sprites-retina.scss
