--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "css-loader": "^6.7.1",
     "deepmerge": "4.2.2",
     "fancy-log": "2.0.0",
+    "fs-extra": "11.1.0",
     "glightbox": "3.2.0",
     "html-loader": "4.2.0",
     "html-webpack-plugin": "5.5.0",
@@ -35,6 +36,7 @@
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
+    "svg-spritemap-webpack-plugin": "4.5.0",
     "terser-webpack-plugin": "5.3.6",
     "ts-loader": "9.4.2",
     "twig": "1.15.4",
