--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "embla-carousel": "^7.1.0",
-    "fs-extra": "11.1.0"
+    "fs-extra": "11.1.0",
+    "fslightbox": "^3.4.1"
   }
 }
