--- a/src/tpl/.htaccess
+++ b/src/tpl/.htaccess
@@ -1,5 +1,7 @@
-RewriteEngine on 
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME}\.html -f
-RewriteRule ^(.*)$ $1.html [NC,L]
-ErrorDocument 404 https://dozvukyleta.cz
+RewriteEngine On 
+RewriteCond %{HTTPS} off 
+RewriteRule (.*) https://%{SERVER_NAME}/$1 [R=301] 
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^([^\.]+)$ $1.html [NC,L]
+
+Header set Content-Security-Policy "upgrade-insecure-requests;"
